fixed item alignment in side bar
items now properly centralize

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -39,6 +39,7 @@ html {
     color: rgb(21, 21, 21);
     font-size: 15px;
     letter-spacing: 1.5px;
+    padding: 6px 6px;
 }
 .Navbar_navigation li a:hover{
     /* list-style: none; */
@@ -96,13 +97,15 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items:center
+    align-items:center;
 }
 .SideBar ul li{
     /* background: green; */
     width: 60vw;
     height: 50px;
     text-align: left;
+    display: flex;
+    align-items: center;
     /* border-style: solid; */
     /* padding:10px 5px; */
     border-bottom: 1px solid rgb(138, 138, 138);
